# trails

./: .gitignore  Cargo.toml  LICENSE  README.md  bug.txt  optimised.xml
.github/workflows/: deploy.yml  pull_request.yml
src/: input.rs  lib.rs  main.rs  map.rs  quadtree.rs  svg.rs  test.rs
trails/: Cargo.toml  small.txt
trails/input/: tiny.txt
trails/src/: input.rs  lib.rs  map.rs  quadtree.rs  svg.rs
trails_cli/: Cargo.toml  README.md
trails_cli/src/: main.rs
web/: Cargo.toml  README.md
web/frontend/: index.html
web/frontend/public/: 404.html
web/frontend/src/: main.ts  style.css
web/frontend/trails/: .env  index.html  package-lock.json  package.json
web/src/: err.rs  extractors.rs  main.rs
