[package]
name = "trails_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
rand = { version = "0.9.0", features = ["small_rng"] }
rand_seeder = "0.4.0"
trails = { path = "../trails" }