[package]
name = "trails_web"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.8.1", features = ["macros"] }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "compression-full"] }
tracing = "0.1.41"
tracing-attributes = "0.1.28"
tracing-subscriber = "0.3.19"
trails = { path = "../trails" }
